When I connect the new Denoise Node it appears in Black #68944

Closed
opened 2019-08-20 23:57:26 +02:00 by Josu Manzanas · 39 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce 8400 GS/PCIe/SSE2 NVIDIA Corporation 3.3.0

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-20 07:45, hash: f2cab8267f
Worked: (optional)

Short description of error
When I connect the new Denoise Node it appears in Black

Exact steps for others to reproduce the error
I connect the new Denoise Node in the composer and the Render appears in Black

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce 8400 GS/PCIe/SSE2 NVIDIA Corporation 3.3.0 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-20 07:45, hash: `f2cab8267f` Worked: (optional) **Short description of error** When I connect the new Denoise Node it appears in Black **Exact steps for others to reproduce the error** I connect the new Denoise Node in the composer and the Render appears in Black
Author

Added subscriber: @JosuManzanas

Added subscriber: @JosuManzanas

Added subscriber: @brecht

Added subscriber: @brecht

Please attach a simple example .blend file to reproduce the problem.

Please attach a simple example .blend file to reproduce the problem.

Added subscriber: @mortuusars

Added subscriber: @mortuusars

I have same issue.
Screenshot: https://i.imgur.com/wyND39m.png
.blend file: DenoiseTest.blend
System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: AMD Radeon (TM) R9 380 Series ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15031.1000

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: daba3e871f

I have same issue. Screenshot: https://i.imgur.com/wyND39m.png .blend file: [DenoiseTest.blend](https://archive.blender.org/developer/F7678321/DenoiseTest.blend) **System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: AMD Radeon (TM) R9 380 Series ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15031.1000 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-20 22:35, hash: `daba3e871f`

Added subscriber: @SmartySmart702

Added subscriber: @SmartySmart702

Same here.
version: 2.81 (sub 3), branch: master, commit date: 2019-08-24 07:02, hash: b7f786c0b1, type: Release
GeForce GTX 750 Ti OC
AMD Phenom II X4 965 CPU
Win 10 x64

Same here. version: 2.81 (sub 3), branch: master, commit date: 2019-08-24 07:02, hash: b7f786c0b150, type: Release GeForce GTX 750 Ti OC AMD Phenom II X4 965 CPU Win 10 x64

Added subscriber: @dark999

Added subscriber: @dark999

here work fine with @mortuusars .blend test file on linux Blender 2.81 daba3e871f (2019-08-20) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.17, Factory Setting applied, LoadUI and Trusted Source disabled in file browser

here work fine with @mortuusars .blend test file on linux Blender 2.81 daba3e871ff5 (2019-08-20) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 435.17, Factory Setting applied, LoadUI and Trusted Source disabled in file browser

Added subscriber: @laurijh

Added subscriber: @laurijh

Having the same problem with OIDN giving a black render result every time.
blender-2.81-daba3e871ff5-linux-glibc217-x86_64
Linux 4.15, 8GB DDR2, GeForce GTX 970, Nvidia driver 430.26

Having the same problem with OIDN giving a black render result every time. blender-2.81-daba3e871ff5-linux-glibc217-x86_64 Linux 4.15, 8GB DDR2, GeForce GTX 970, Nvidia driver 430.26

I can't reproduce the problem. Which CPU model do you have?

I can't reproduce the problem. Which CPU model do you have?

AMD Athlon(tm) 64 X2 Dual Core Processor 4400+ (family: 0xf, model: 0x6b, stepping: 0x1)
cpu MHz: 2300
cache size: 512kB (x2)

AMD Athlon(tm) 64 X2 Dual Core Processor 4400+ (family: 0xf, model: 0x6b, stepping: 0x1) cpu MHz: 2300 cache size: 512kB (x2)

Added subscriber: @machieb

Added subscriber: @machieb

I think for Open Image Denoiser you need a cpu with SSE 4.1 or greater. Your cpu is too old!
See: https://openimagedenoise.github.io/
You can download cpu-z and see the extensions your cpu provides.

I think for Open Image Denoiser you need a cpu with SSE 4.1 or greater. Your cpu is too old! See: https://openimagedenoise.github.io/ You can download cpu-z and see the extensions your cpu provides.

Ok, thanks @machieb that's the explanation. On Linux /proc/cpuinfo shows the CPU feature flags which for me includes sse and sse2 but no higher.
Us with an old CPU but a newer Nvidia GPU can still use the Optix/Cuda denoiser and related Blender add-ons.

Ok, thanks @machieb that's the explanation. On Linux /proc/cpuinfo shows the CPU feature flags which for me includes sse and sse2 but no higher. Us with an old CPU but a newer Nvidia GPU can still use the Optix/Cuda denoiser and related Blender add-ons.
Stefan Werner was assigned by Brecht Van Lommel 2019-08-27 11:18:23 +02:00

I've mentioned this requirement in the release notes now. But I still think there should be some indication in the user interface.

I've mentioned this requirement in the release notes now. But I still think there should be some indication in the user interface.

This issue was referenced by d547f9d3d2

This issue was referenced by d547f9d3d291b495a022e1e3bfbb5f4af25c02b1
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

@laurijh I don't have a CPU without SSE4.1, it would be great if you could leave feedback here if my fix worked for you. On unsupported CPUs, you should now see a message in the node itself and it should now act as a passthrough instead of returning a black image.

@laurijh I don't have a CPU without SSE4.1, it would be great if you could leave feedback here if my fix worked for you. On unsupported CPUs, you should now see a message in the node itself and it should now act as a passthrough instead of returning a black image.

Added subscriber: @dgsantana

Added subscriber: @dgsantana

Commit d547f9d3d2 breaks builds, it's missing the BLi_system.h header on source/blender/editors/space_node/drawnode.c.

diff --git a/source/blender/editors/space_node/drawnode.c b/source/blender/editors/space_node/drawnode.c
index 72a73f89227..b89f163f579 100644
--- a/source/blender/editors/space_node/drawnode.c
+++ b/source/blender/editors/space_node/drawnode.c
@@ -24,6 +24,7 @@
 
 - include "BLI_blenlib.h"
 - include "BLI_math.h"
+#include "BLI_system.h"
 
 - include "DNA_node_types.h"
 - include "DNA_object_types.h"
Commit d547f9d3d291 breaks builds, it's missing the BLi_system.h header on source/blender/editors/space_node/drawnode.c. ``` diff --git a/source/blender/editors/space_node/drawnode.c b/source/blender/editors/space_node/drawnode.c index 72a73f89227..b89f163f579 100644 --- a/source/blender/editors/space_node/drawnode.c +++ b/source/blender/editors/space_node/drawnode.c @@ -24,6 +24,7 @@ - include "BLI_blenlib.h" - include "BLI_math.h" +#include "BLI_system.h" - include "DNA_node_types.h" - include "DNA_object_types.h" ```

In #68944#763645, @Stefan_Werner wrote:
@laurijh I don't have a CPU without SSE4.1, it would be great if you could leave feedback here if my fix worked for you. On unsupported CPUs, you should now see a message in the node itself and it should now act as a passthrough instead of returning a black image.

After a quick test I can say that it does work. There is a message saying that the node is disabled because SSE4.1 is required and the node act as a passthrough.

> In #68944#763645, @Stefan_Werner wrote: > @laurijh I don't have a CPU without SSE4.1, it would be great if you could leave feedback here if my fix worked for you. On unsupported CPUs, you should now see a message in the node itself and it should now act as a passthrough instead of returning a black image. After a quick test I can say that it does work. There is a message saying that the node is disabled because SSE4.1 is required and the node act as a passthrough.

Added subscriber: @rodblend-4

Added subscriber: @rodblend-4

If you are using an existing template script to batch render, make sure you update your command line to use a path to Blender 2.81

example...
replace
C:\Program Files\Blender Foundation\Blender
with
C:\Program Files\Blender Foundation\Blender 2.81\

If you are using an existing template script to batch render, make sure you update your command line to use a path to Blender 2.81 example... replace C:\Program Files\Blender Foundation\Blender with C:\Program Files\Blender Foundation\Blender 2.81\

Removed subscriber: @machieb

Removed subscriber: @machieb

Added subscriber: @captainpicard99

Added subscriber: @captainpicard99

I have this same issue, but I have an AMD Ryzen 7 3700x which does support SSE4.1. I recently upgraded from an i7 6700, and that worked fine with the denoise node. I am using Blender 2.82 from the official Arch repos.

I have this same issue, but I have an AMD Ryzen 7 3700x which does support SSE4.1. I recently upgraded from an i7 6700, and that worked fine with the denoise node. I am using Blender 2.82 from the official Arch repos.

Added subscriber: @Hastouki

Added subscriber: @Hastouki

I'm getting the same issue. I dual boot macOS on this PC which didn't have the same problem, seems to only happen on my [Arch] Linux.

Blender 2.82a
CPU: Intel(R) Core(TM) i7-3770K CPU @ 3.50GHz
GPU: AMD RX 580
Arch Linux, X11, KDE

I'm getting the same issue. I dual boot macOS on this PC which didn't have the same problem, seems to only happen on my [Arch] Linux. Blender 2.82a CPU: Intel(R) Core(TM) i7-3770K CPU @ 3.50GHz GPU: AMD RX 580 Arch Linux, X11, KDE

Added subscriber: @3di

Added subscriber: @3di

I've found the denoise nodes to only ouput black if there are too many of them. I'm guessing it's because they all get executed simultaneously rather than consecutively, so system resources get overwhelmed. There's an additional blend file to try in this report:

https://developer.blender.org/T77023

The denoise nodes that fail are random each time you render.

I've found the denoise nodes to only ouput black if there are too many of them. I'm guessing it's because they all get executed simultaneously rather than consecutively, so system resources get overwhelmed. There's an additional blend file to try in this report: https://developer.blender.org/T77023 The denoise nodes that fail are random each time you render.

I'm only including it once, and it still has that problem.

I'm only including it once, and it still has that problem.

is it a 4k render? Or perhaps you have other expensive nodes? It's happening for me only if my system runs out of ram whilst it's doing the compositing stage. What's your system ram and cpu usage when it's calculating the compositor?

is it a 4k render? Or perhaps you have other expensive nodes? It's happening for me only if my system runs out of ram whilst it's doing the compositing stage. What's your system ram and cpu usage when it's calculating the compositor?

No, its 1920x1080. I have 16 gigs of ram, it only uses around 1-2 gigs image.png

No, its 1920x1080. I have 16 gigs of ram, it only uses around 1-2 gigs ![image.png](https://archive.blender.org/developer/F8573485/image.png)

hmm, not sure then. Should work on AMD apparently. Maybe try 2.9 and see if that's any better.

hmm, not sure then. Should work on AMD apparently. Maybe try 2.9 and see if that's any better.

I'm a beginner and doing a very simple tutorial (donut) with only 1 denoise node. Like I said, it works when I boot into my macOS, but not in Linux.

I'm a beginner and doing a very simple tutorial (donut) with only 1 denoise node. Like I said, it works when I boot into my macOS, but not in Linux.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

@captainpicard99 & @Hastouki The Arch version of OIDN that is used to build the Arch version of Blender is corrupted. That is why you are getting this issue.
See https://github.com/OpenImageDenoise/oidn/issues/76#issuecomment-640953648

Please download the official version of Blender from the following link:

https://www.blender.org/download/

@captainpicard99 & @Hastouki The Arch version of OIDN that is used to build the Arch version of Blender is corrupted. That is why you are getting this issue. See https://github.com/OpenImageDenoise/oidn/issues/76#issuecomment-640953648 Please download the official version of Blender from the following link: https://www.blender.org/download/
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
15 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68944
No description provided.