Fix T68944: Added check for SSE4.1 to denoising node.

Since OpenImageDenoise requires a CPU with SSE 4.1 or newer,
let the node act as passthrough on unsupported CPUs and display
a message in the node itself.